Fixed mobile burger pop-up layers z-indexes

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -11,6 +11,10 @@
     z-index: 2;
 }
 
+.zIndex_3 {
+    z-index: 3;
+}
+
 .headerContent {
     /*background: var(--font-color);*/
     height: 128px;
